--- a/src/components/hourly-item/hour-item.css
+++ b/src/components/hourly-item/hour-item.css
@@ -1,6 +1,5 @@
 .hour-item {
-  margin: 0px;
-  margin-right: 8px;
+  margin: 0 8px 0 8px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
