--- a/src/components/search-box/search-box.css
+++ b/src/components/search-box/search-box.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: .2rem;
+  margin-top: -20px;
 }
 
 .search-box-container input {
